# serializer version: 1
# name: test_displayed_error
  '''
  <!DOCTYPE html>
  <html>
   <head>
    <title>
     Login to Yak-Shears
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
    <link href="/static/css/login.css" rel="stylesheet"/>
   </head>
   <body>
    <div class="form-container">
     <h2>
      Login
     </h2>
     <form action="/auth/login" id="login" method="post">
      <input name="redirect" type="hidden" value="/files"/>
      <div class="form-field">
       <label for="email">
        Email
       </label>
       <input id="email" name="email" required="" type="email"/>
      </div>
      <div class="form-field">
       <label for="password">
        Password
       </label>
       <input id="password" name="password" required="" type="password"/>
      </div>
      <p class="error">
       Invalid email or password
      </p>
      <div class="form-field">
       <button type="submit">
        Login
       </button>
      </div>
     </form>
     <p>
      Note: Users must be created by an administrator using the CLI tool.
     </p>
    </div>
   </body>
  </html>
  
  '''
# ---
# name: test_login_get_shows_form
  '''
  <!DOCTYPE html>
  <html>
   <head>
    <title>
     Login to Yak-Shears
    </title>
    <link href="/static/css/main.css" rel="stylesheet"/>
    <script src="/static/js/htmx.min.js">
    </script>
    <link href="/static/css/login.css" rel="stylesheet"/>
   </head>
   <body>
    <div class="form-container">
     <h2>
      Login
     </h2>
     <form action="/auth/login" id="login" method="post">
      <div class="form-field">
       <label for="email">
        Email
       </label>
       <input id="email" name="email" required="" type="email"/>
      </div>
      <div class="form-field">
       <label for="password">
        Password
       </label>
       <input id="password" name="password" required="" type="password"/>
      </div>
      <div class="form-field">
       <button type="submit">
        Login
       </button>
      </div>
     </form>
     <p>
      Note: Users must be created by an administrator using the CLI tool.
     </p>
    </div>
   </body>
  </html>
  
  '''
# ---